<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferanser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#Fbb687"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#Feebeb">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/spraak"/>
        <Button
            android:id="@+id/norsk"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FF5722"
            android:text="@string/norsk"/>
        <Button
            android:id="@+id/tysk"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FF5722"
            android:text="@string/tysk"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#Feebeb">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/velgSpill"/>
        <Button
            android:id="@+id/regnestykker5"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:backgroundTint="#0996D6"
            android:text="@string/regnestykker5"/>

        <Button
            android:id="@+id/regnestykker10"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:backgroundTint="#921AA6"
            android:text="@string/regnestykker10"/>
        <Button
            android:id="@+id/regnestykker15"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:backgroundTint="#4D7E15"
            android:text="@string/regnestykker15"/>
    </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
