<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#feebeb"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="63dp">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF5722"
            android:textSize="20sp"
            android:text="@string/startBtn" />

        <Button
            android:id="@+id/omSpilletBtn"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#0996D6"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/omSpilletBtn" />

        <Button
            android:id="@+id/preferanserBtn"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#921AA6"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/preferanserBtn" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:src="@drawable/numbers" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>